# gz_ws

./: README.md  inset.md  vehicle_detect_patch.md
install/: local_setup.sh  setup.sh
install/parking_gz_sim/lib/parking_gz_sim/: cctv_map_builder  gripper_controller  map_astar_planner  sim_rigid_body_sync  waypoint_publisher
install/parking_gz_sim/share/parking_gz_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/parking_gz_sim/share/parking_gz_sim/config/: bridge.yaml  bridge_deliverybot.yaml
install/parking_gz_sim/share/parking_gz_sim/launch/: deliverybot.launch.py  sim.launch.py
install/parking_gz_sim/share/parking_gz_sim/worlds/: deliverybot_parking.sdf  parking_lot.sdf
install/test_assembly2_description/share/test_assembly2_description/: package.bash  package.zsh
log/: latest_build  latest_list
src/: README.md  package.xml  setup.cfg  setup.py
src/config/: bridge.yaml  bridge_deliverybot.yaml
src/launch/: deliverybot.launch.py  sim.launch.py
src/parking_gz_sim/: cctv_map_builder.py  gripper_controller.py  map_astar_planner.py  sim_rigid_body_sync.py  waypoint_publisher.py
src/worlds/: deliverybot_parking.sdf  parking_lot.sdf
