<?xml version="1.0"?>
<package format="3">
  <name>parking_gz_sim</name>
  <version>0.1.0</version>
  <description>협동 주차로봇 제어부 가제보 검증 패키지 (Gazebo Harmonic)</description>
  <maintainer email="dev@example.com">parking_team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
